Bug 62682 - SVG Export Crashes for Hyperlinks with Linebreaks
Summary: SVG Export Crashes for Hyperlinks with Linebreaks
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.1.0.0.alpha0+ Master
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-23 22:50 UTC by Moritz K
Modified: 2014-10-17 14:22 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Example Presentation (13.16 KB, application/vnd.oasis.opendocument.presentation)
2013-03-23 22:50 UTC, Moritz K
Details
console + bt with symbols on master sources (16.23 KB, text/plain)
2013-03-29 15:54 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Moritz K 2013-03-23 22:50:35 UTC
Created attachment 76954 [details]
Example Presentation

Hyperlinks in Text Areas are wrapped if they are too long for the box. If a document contains such a wrapped link, an export to SVG lets LibreOffice crash.

Please try it with the attached file.
Comment 1 A (Andy) 2013-03-23 22:57:53 UTC
reproducible with LO 4.0.1.2 (Win7 Home, 64bit)
Comment 2 Julien Nabet 2013-03-29 15:05:25 UTC
Comment on attachment 76954 [details]
Example Presentation

Mimetype fixed
Comment 3 Julien Nabet 2013-03-29 15:54:59 UTC
Created attachment 77219 [details]
console + bt with symbols on master sources

On pc Debian x86-64 with master sources updated today, I reproduced the crash.

I attached console logs and bt.
During gdb session, I got this:
1674	                sContent = mrCurrentTextPortion->getString();
(gdb) p mrCurrentTextPortion
$4 = empty uno::Reference
Comment 4 Julien Nabet 2013-03-29 15:57:04 UTC
Thorsten/Radek: one for you?
Comment 5 Thorsten Behrens (allotropia) 2013-04-04 08:56:25 UTC
Seems SVGTextWriter::writeTextPortion() gets confused about this mnLeftTextPortionLength filter/source/svg/svgwriter.cxx - for the wrapped line, it fails to notice a bunch of characters had already been used up
Comment 6 Commit Notification 2013-04-08 11:07:19 UTC
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3c88993aeb262620b8e3bb3151e57f16260b51f3

fdo#62682 bandaid fix for hyperlink export crash



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2014-10-16 16:10:51 UTC
exporting twice will still crash because SetCalcFieldValueHdl is set, some *other* outliners are created internally that copy that, so while SetCalcFieldValueHdl is restored on the original the other point to the destroyed Link

sigh