fdo#62682 bandaid fix for hyperlink export crash

Fixes the crash, but the deeper problem is that client code gets
confused about portion count, does not expect field to span more
than one line.

Change-Id: I237f3bbd16265597ee0639e77dd561d6c7f2cec8